Fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
     margin: 85px 0px;
 }
 
+#oneFloor {
+    z-index: 1;
+}
+
 .floor > div > div {
     transition: all .2s ease;
 }
@@ -50,20 +54,8 @@ img {
     backface-visibility: hidden;
     width: 100%;
     height: 100%;
-    animation-delay: 1s;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
 }  
 
 .front {
     transform: rotateY(180deg);
 }
-
-@-webkit-keyframes move {
-    0% {
-      bottom:0px;
-    }
-    100% {
-      bottom:-160px;
-    }
-  }
